--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "inngest-cli": "latest",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.9",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
@@ -69,6 +70,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.5",
     "superjson": "^2.2.2",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
