--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prisma": "^6.12.0",
     "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^7.2.0",
     "react": "^19.0.0",
     "react-day-picker": "latest",
     "react-dom": "^19.0.0",
